# babigo

./: .gitignore  README.md  babi_converter.py  babigo.py  babilang.py  pyproject.toml
converter/: babi_converter.py  hiragana_converter.py
tests/: __init__.py  create_data.py  test_babi_converter.py
