[tool.poetry]
name = "babilang"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.1"
pykakasi = "2.0.6"
requests = "2.25.1"
python-dotenv = "0.15.0"

[tool.poetry.dev-dependencies]
flake8 = "3.9.0"
pytest = "6.2.2"
pandas = "1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
